Fixed bug where squares overflowed on grid. Added board size changing functionality. Organized file structure.

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@
 
 /* containers */
 .App {
+  font-family: var(--font);
   background-color: var(--disabled);
   flex-direction: column;
   min-width: 600px;
@@ -29,7 +30,6 @@
 .main-container {
   text-transform: uppercase;
   letter-spacing: 1em;
-  font-family: var(--font);
   text-align: center;
 }
 
@@ -47,7 +47,18 @@
 .header-item,
 .stop,
 .count {
+  min-width: 50px;
   height: 50px;
+}
+
+.board-size {
+  flex-direction: row;
+  width: 610px;
+}
+
+.size-selector:hover {
+  background-color: var(--win);
+  color: white;
 }
 
 /* game settings */
@@ -68,7 +79,8 @@
   color: var(--lose);
 }
 
-.won {
+.won,
+.active {
   color: var(--win);
 }
 
@@ -97,20 +109,21 @@
   border-width: 10px;
   border-style: solid;
   background-color: white;
-  width: 510px;
-  height: 510px;
+  width: 500px;
+  height: 500px;
   flex-wrap: wrap;
 }
 
 /* squares */
+.border {
+  background-color: white;
+}
 .bomb,
 .square-visible,
 .square-hidden {
   margin: auto;
   letter-spacing: 0;
-  font-size: 20px;
-  width: auto;
-  height: auto;
+  font-size: 0.5em;
 }
 .square-visible {
   background-color: var(--shown);
